clang/test/BSC/Negative/InitAnalysis/init-ensure-init-fnptr-warn.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test that calling through a function pointer with ensure_init params
// still warns when the argument is not an address-of expression.

typedef _Safe void (*InitFn)(int *__attribute__((ensure_init)) _Borrow out);

// Passing a variable (not &expr) should warn even for indirect calls.
_Safe void test_fnptr_indirect_arg(InitFn fn, int * _Borrow q) {
    fn(q); // expected-warning {{ensure_init effect cannot be verified when argument is not an address-of expression}}
}
